nivasa-macros/tests/trybuild/validation_array_min_size_malformed.stderr
error: expected `#[array_min_size(<usize>)]`
 --> tests/trybuild/validation_array_min_size_malformed.rs:5:5
  |
5 |     #[array_min_size("two")]
  |     ^
