nivasa-macros/tests/trybuild/validation_array_min_size_malformed.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct InvalidArrayMinSizeArgsForm {
    #[array_min_size("two")]
    tags: Vec<String>,
}

fn main() {}
